Adds easter egg

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,71 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="no">
+   <!--
+                                                      ,,                                                                                                           
+                                                      ;c.                                                                                                         
+                                                       ;d;                                                                                                        
+                                                      ..,ko.                                                                                                      
+                                                      :c 'kk,                                                                                                     
+                                                     .dk. .xKd;.                                                                                                  
+                                                     ;XNc  .lXWKc.                                                                                                
+                                                    ,0MMx.   ;xKWO;                                                                                               
+                                                   ;0MMMX;     'kWNk,                                                                                             
+                                                 .oXMMMMWo      .lXMNx,                                                                                           
+                                               .lKWMMMMMMO.       ,OWMNk;.                                ..                                                      
+                                            .;dXWMMMMK0WMN:        .lKMMW0l'                             .,.                                                      
+                                         .:dKWMMMMMNd.,0MMd          .dNMMMXxc.                         ,:.                                                       
+                                    .,cdONWMMMMMN0o'  .kMMO.           ,xNMMMWXkl,.                 . .cl.                                                        
+                             ..,:ldOXWMMMMMWN0xc,.    ,KMMX;             ,xXMMMMMWKkoc;'........,cll,'od.                                                         
+                   ..',;cloxOKXWMMMWWNK0kdl;'.       'OWMMWl               .lONMMMMMMMWNXKKKKKXNN0c..xx.                                                          
+     ...'';;::cclodxkOO00Okkkxdolc:;,..            .lKMMMMMd                  ,lkKWMMMMMMMMMMMW0c. 'OO'                                                           
+       .......,;,.......                         ,oKWWXkxXMk. ..                 .,:lo0WMMMMNk:.  'OK;                                                            
+              .,lxkdl:,.                     .;oONN0xc. .kMk. .'cc,.                .oKWMWXd,    ,0Nl                                                             
+                 'dXMMWX0xo:'.         ..,cdk00ko:'.     oWx.   .cdkxo:'..     ..,ckXWMNkc.     ,0Wx.                                                             
+                   ,OWMMMMMMNKkl;.  .',:clc:,..          cNo       .:ok0K00OkkO0XWMMNOl'       '0M0,                                                              
+                    .xWMMMMWNWMMWXko:.                   :x.           .':lkNMMMWKkc;.        'OMNl                                                               
+                     .kWMMMNd;:okXWMWKd;.   ..           .            ..,cd0XKxl;. .;.       .kWMO.                                                               
+                      ,KMMMMO.   .cOWMMWKd,..',;clooddooollllooooddxkOkOkxl:,.    .ol       .oWMNc                                                                
+                       dWMMMNc     .lXMWKOKOc.   .',:cloodddddddoolc:,..  .,'     cO,       :XMMO.                                                                
+                       :NMMMMo       ;KMx.'l00l.  ..                    .:o;     '0k.      .OMMMd                                                                 
+                       ,KMMMWo        :XX;  .l00c..,:'                 ;kd.      oWo       oWMMN:                                                                 
+                       ,KMMMNc        .xWo    .xXO, 'oo.             'x0l.      'OWl      '0MMMK,                                                                 
+                       ;KMMM0'         :Nx.     cKXl. ck:          .cK0;        ;XWl      cNMMMO.                                                                 
+                       :NMMWd.         '0x.      ,ONd. ;kc        .xNk'         cWWo      dMMMMO.                                                                 
+                       oWMMK,          .ko        .xNk. ,k:      'ONx. .,.      oWMO.    .xMMMMK,                                                                 
+                      .OMMWl           .o,    .,,. .dNx. :o.    'ONd.   :kxo:'. lWMNo     oMMMMNc                                                                 
+                      :NMWk.            ..'cdOkd:.  .dXd. ;'   .ONo.     .:xKX0k0WMMNo.   :XMMMMx.                                                                
+                     .kWM0'            ,lONNk:.      .oKc .. .'dNd.         .;oOXWMMMW0o,..dWMMMNc                                                                
+                     :NMK;          'lONMWO;          .oO'   cKNk.      .;:;.   .:okKNMMWKO0NMMMMK;                                                               
+                    .OMX:        .:kXMMMMWXOo;.        .dl  .OMK;    ,lkko;.        .':okKNWMMMMMMXc                                                              
+                    oWXc       'oKWMWNK000XNWWKd;.      .c' cNMx. .cOKk:.                .':lxOXWMMNx'                                                            
+                   :XXc     .;kNMW0o;... ..';lkKN0o.     ...xWWd,oKXx,                         .,:lxOOo,.                                                         
+                  '0Xc    .l0WMMW0:..          .;o0Kd'     'OMWNNW0;                                 .','.                                                        
+                 .xK:   'dKWMMMMMWNX0ko:.         .;dOo.   ;XMMMWk.                  ...',;::ccllllllolllc:;,'....                                                
+                .d0;  ,xXMMMMMMMMMMMMMMWXkc.         .cd;  ;XMMM0'          ..,:loxO0KXNWWWWNK0kxolc:;,,'.....                                                    
+                lk,.,oxdlcc:::cloxOKWMMMMMMXx,         .;,.;XMMWo       .;lx0XWMMMMMWX0kol:,..                                                                    
+               cd...'.             .,cd0NMMMMNk;           ;XMMWo    'lkXWMMMMMWKOdc,.                                                                            
+              ;c.                      .,lONMMMNk,         ,KMMMx. ,xNMMMMMWXkl,.                                                                                 
+             ,,                            'o0WMMNd.       .OMMMXdxNMMMMWXx:.                                                                                     
+            ..                               .:kNMMK:.     .dMMMMMMMMMWOc.                                                                                        
+                                                ,xXMNx'     cNMMMMMMW0:.                                                                                          
+                                                  'dXWK:    '0MMMMMNd.                                                                                            
+                                                    ,xNNo.   oNWMMXc                                                                                              
+            .'..     .'..     .'.                .'.  ;ONk'  ,dKMNl      .''.                                                                                     
+            :KNo    ,0NNd.   'ONx.              'ONo   .cK0;  .oWk.    ,xXKd'                                                                                     
+            .xMK,  .dWWWX:   oWNc      ...      '0Md.... .x0c  'Ol   ,xNNx,        ...           ...   ...                                                        
+             ;XWd  ;XNxOMk. '0Mk.   'oO000Od,   '0MXO000kc.:ko'.;' ,xNXd'       ;d0000Oo'   ,kOkk0K0dcd0KKk;                                                      
+             .dWK,.xMk.:XN: oWX:   :XWx;';xNXc  '0MXo,'lXWx..d0o..cXMMO'      .oNNd,':OWK;  :NM0c,lKMXd;;OMK,                                                     
+              ,KWdlXX: .xMkc0Md.  .OMNOxxxONMO. '0Mx.   dMX;  .:l.'coKW0;     ,KMx.   ,KMx. :NWc  .kMk.  lWN:                                                     
+               oWNNWx.  ;KWNWK,   .OMXxccccll:. '0Md    dMX;    ':.  'kWNd.   ,KMd.   ,KMx. :NNc  .kMk.  lWN:                                                     
+               '0MMK;    oWMWo     cXWk;.'lxx,  '0M0:''lKWd.   ;c',.  .lXW0;  .dNXo'.;kWX;  :NNc  .kMk.  lWN:                                                     
+                c00l     'kKx'      ,d0K000x;   .xK000KKk:.    c0o'.    ,kKO:  .:x0K0K0d'   ;O0;  .oKo.  :0O;                                                       
+                 ..        .           ....      .......        ..        ...     ....       ..     .     ..
+
+         Hvis du er her, så er du kanskje interessert i å bli med i WebKom?
+         Vi gjør masse kule ting - visste du at WebKom drifter flere servere på NTNU, at vi har ukentlige møter med sosial koding, og at dette er en super arena for å lære masse om data?
+         Søk neste opptak, send oss en mail på webkom@nabla.ntnu.no eller send en melding til noen i WebKom hvis du er interessert!
+    -->
 
     <head>
 
