--- a/templates/base.html
+++ b/templates/base.html
@@ -303,11 +303,11 @@
         {% block main %}
         <div class="row">
             <!-- Blog Entries Column -->
-            <div class="col-md-8">
+            <div class="col-lg-8">
             {% block content %}{% endblock content %}
             </div>
             <!-- Blog Sidebar Widgets Column -->
-            <div class="col-md-4">
+            <div class="col-lg-4">
             {% block sidebar %}
             {% endblock sidebar %}
             </div>
