Made UI prettier for attendance registration

--- a/nablapps/events/templates/events/register_attendance.html
+++ b/nablapps/events/templates/events/register_attendance.html
@@ -6,33 +6,58 @@
         background-color: var(--{{status_type}});
     }
 </style>
+{% if status_type == "danger" or status_type == "success"  %}
+<p>
+    <a href="{{event.get_absolute_url}}" class="text-light">Tilbake til arrangementsiden</a>
 
-
-<h1>{{ namestring }}</h1>
-<form method="post" autocomplete="off">{% csrf_token %}
-{#{% if event.penalty == 1 %}#}
-{#    <button type="button" onclick="make_all_penalty('penalty_form')">Aktiver prikker</button>#}
-{#    <span>NB! Du må trykke send inn for at prikkene skal registreres.</span>#}
-{#{% endif %}#}
-{% if attendance_message %}
-<h1 >{{ attendance_message }}</h1>
+    <a class="text-light float-right" data-toggle="collapse" href="#collapseInfo" role="button" aria-expanded="false" aria-controls="collapseInfo">
+    Forklaring
+    </a>
+</p>
 {% else %}
-<h1>Skriv inn brukernavn eller skann NTNU-kortet</h1>
-{%  endif %}
-<br>
-<div class="form-group row">
-    <div class="col-sm-12">
-        <input type="text" class="form-control form-control-lg" name="identification_string" id="colFormLabelLg" placeholder="Skriv inn brukernavn eller skann NTNU-kortet" autofocus>
-        <input type="hidden"  name="identification_type" value="username">
-        <input type="hidden"  name="identification_type" value="ntnu_card">
-    </div>
+<p>
+    <a href="{{event.get_absolute_url}}" class="text-muted">Tilbake til arrangementsiden</a>
+
+    <a class="text-muted float-right" data-toggle="collapse" href="#collapseInfo" role="button" aria-expanded="false" aria-controls="collapseInfo">
+    Forklaring
+    </a>
+</p>
+{% endif %}
+
+<div class="collapse" id="collapseInfo">
+  <div class="card card-body">
+      <p>
+      Her kan arrangementadministratorer registrere oppmøte for brukere som er påmeldt et arrangement.
+      Brukere registreres ved å skrive inn brukernavnet sitt, eller ved å scanne NTNU-kortet sitt i en kortskanner.
+      Merk at for at NTNU-kortet skal fungere så må brukeren ha registrert EM-koden på baksiden av kortet.
+      Dette gjøres under "Endre profil" på nabla.no.
+      <br><br>
+      Prikkfordeling skjer automatisk når en registrering skjer, men bare for arrangementer der prikker korresponderer med oppmøte.
+      Klikk på "Avslutt registrering" for å fordele prikker til dem som ikke møtte opp.
+      Prikkoversikten finnes <a href="{%  url "event_administer_penalties" pk=event.pk %}">her</a>
+      </p>
+  </div>
 </div>
+
+{% if status_type == "danger" or status_type == "success"   %}
+<h1 class="display-4 text-light">{%  firstof attendance_message "Skriv inn brukernavn eller skann NTNU-kortet" %}</h1>
+{% else %}
+<h1 class="display-4">{%  firstof attendance_message "Skriv inn brukernavn eller skann NTNU-kortet" %}</h1>
+{% endif %}
 <br>
+<form method="post" autocomplete="off">{% csrf_token %}
+    <div class="form-group row">
+        <div class="col-sm-12">
+            <input type="text" class="form-control form-control-lg" name="identification_string" id="colFormLabelLg" placeholder="Skriv inn brukernavn eller skann NTNU-kortet" autofocus>
+            <input type="hidden"  name="identification_type" value="username">
+            <input type="hidden"  name="identification_type" value="ntnu_card">
+        </div>
+    </div>
 </form>
-
+<br>
 <form method="post" action="{% url "event_noshow_penalties" event.pk %}">{% csrf_token %}
-<button class="btn btn-primary float-right" type="submit" value="register_noshow_penalties" onclick="return confirm('Er du sikker på at du vil avslutte registreringe. De som ikke har møtt opp vil kanskje få prikk?')">Avslutt registrering</button>
-
+    <button class="btn btn-secondary float-right" type="submit" value="register_noshow_penalties" onclick="return confirm('Er du sikker på at du vil avslutte registreringen. De som ikke er registrert vil da få prikk i henhold til prikkreglementet')">Avslutt registrering</button>
 </form>
+<br>
 
 {% endblock %} {# block "content" #}
