--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,8 @@
     </head>
 
     <body>
-
-<!-- Pop up window displaying important information about the 'fadderperiode' -->
+    {% block body%}
+    <!-- Pop up window displaying important information about the 'fadderperiode' -->
     {% if newuser_popup %}
         <!-- Show the modal on page load-->
         <script type="text/javascript">
@@ -384,10 +384,10 @@
             </div>
         </footer>
         <!-- /.container -->
-        {% render_block "js" %}
     </div>
+    {% endblock body%}
     </body>
-
+    {% render_block "js" %}
 </html>
 
 
