--- a/nablapps/events/templates/events/event_detail.html
+++ b/nablapps/events/templates/events/event_detail.html
@@ -6,6 +6,11 @@
 
 {% block content %}
 
+{% block meta_image %}
+        <meta property="og:image" content="https://{{ request.get_host }}{% thumbnail event.picture 1200x630 box=event.cropping upscale=True detail=True quality=95 %}"/>
+        <meta property="og:image:width" content="1200"/>
+        <meta property="og:image:height" content="630"/>
+{% endblock meta_image %}
 
 {% include "content/includes/article_content.html" with content=event %}
 {# Vis påmeldte #}
@@ -17,7 +22,7 @@
         {% for registration in event.eventregistration_set.all %}
         {% with user=registration.user %}
         <span class="badge {% ifequal user request.user %} badge-info {% else %} badge-secondary {% endifequal %}
-                     {% if registration.waiting %} 
+                     {% if registration.waiting %}
                      waiting-place
                      {% endif %}" style="display: inline-block;">
 
