--- a/templates/base.html
+++ b/templates/base.html
@@ -83,6 +83,20 @@
         <meta name="author" content="Nabla">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- Standarised image for Facebooksharing etc -->
+        {% block meta_image %}
+        <meta property="og:image" content="https://nabla.no/media/thumbnails/uploads/news_pictures/forsidenyhet.png.570x200_q95_box-0%2C0%2C770%2C300_crop-smart_detail_upscale.jpg"/>
+        <meta property="og:image:width" content="570"/>
+        <meta property="og:image:height" content="200"/>
+        {% endblock meta_image %}
+
+        <meta property="og:url" content=https://www.nabla.no/">
+        <meta property="og:site_name" content="Nabla"/>
+        <meta property="og:title" content="Nabla - Fysikk og matematikk"/>
+        <meta property="og:description" content="Hjemmesiden til linjeforeningen Nabla, for studentene på
+                      fysikk og matematikk-masterprogrammet på NTNU."/>
+        <meta property="og:type" content="website"/>
+
         <!-- Used by Google to verify that we own the domain. -->
         <meta name="google-site-verification" content="lfXfxPU7wQGV0Sd87zCnA_3v0rQlDVQdth3kH_1fzIM" />
 
@@ -131,6 +145,8 @@
 
         {% block more_head %}
         {% endblock %}
+
+
     </head>
 
     <body>
