--- a/nablapps/events/templates/events/register_attendance.html
+++ b/nablapps/events/templates/events/register_attendance.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block body %}
-<style xmlns="http://www.w3.org/1999/html">
+<style>
     body{
         background-color: var(--{%  firstof status_type "nabla-background"%});
     }
@@ -14,8 +14,9 @@
     .collapsing {
       transition: none !important;
     }
-
-
+     a:hover {
++        text-decoration: none;
++    }
 
 </style>
 
@@ -24,37 +25,40 @@
 
 <div class="d-flex justify-content-between">
     <a href="{{event.get_absolute_url}}" class="{% firstof text_type "text-muted"%}">{{ event.headline}}</a>
-    <a href="{% url 'wiki:get' 'retningslinjer-arrangement/' %}" class="{% firstof text_type "text-muted"%} text-center">Prikkreglement: {{ event.get_penalty_rule_name}}</a>
+    <a href="{% url 'wiki:get' 'retningslinjer-arrangement/' %}" class="{% firstof text_type "text-muted"%}">Prikkreglement: {{ event.get_penalty_rule_name}}</a>
 
     <a class="{% firstof text_type "text-muted"%}" data-toggle="collapse" href="#collapseInfo" role="button" aria-expanded="false" aria-controls="collapseInfo">
     Forklaring
     </a>
 </div>
 
-<div class="collapse" id="collapseInfo">
-  <div class="card card-body">
-      <p>
-      Her kan arrangementadministratorer registrere oppmøte for brukere som er påmeldt et arrangement.
-      Brukere registreres ved å skrive inn brukernavnet sitt, eller ved å skanne NTNU-kortet sitt i en kortskanner.
-      Merk at for at NTNU-kortet skal fungere så må brukeren ha registrert EM-koden på baksiden av kortet.
-      Dette gjøres under "Endre profil" på nabla.no.
-      <br><br>
-      Prikkfordeling skjer automatisk når en registrering skjer, men bare for arrangementer der prikker korresponderer med oppmøte.
-      Hvis en bruker har prikk fra før vil ikke prikkene bli endret her.
-      Merk at siden kan brukes til å sjekke påmelding, selv om arrangementet ikke har prikker.
-      <br><br>
-      Klikk på "Start arrangementet " for å starte å fordele for-sent prikker til dem som møter opp.
-      Klikk på "Avslutt registrering" for å fordele ikke-møtt prikker til dem som ikke møtte opp.
-      Prikkoversikten finnes <a href="{%  url "event_administer_penalties" pk=event.pk %}">her</a>
-      </p>
-  </div>
+<div class="collapse pt-3" id="collapseInfo">
+    <div class="card card-body">
+        <p>
+            Her kan arrangementadministratorer registrere oppmøte for brukere som er påmeldt et arrangement.
+            Brukere registreres ved å skrive inn brukernavnet sitt, eller ved å skanne NTNU-kortet sitt i en kortskanner.
+            Merk at for at NTNU-kortet skal fungere må brukeren ha registrert EM-koden på baksiden av kortet.
+            Dette gjøres under "Endre profil" på nabla.no.
+        </p>
+        <p>
+            Prikkfordeling skjer automatisk når en registrering skjer, men bare for arrangementer der prikker korresponderer med oppmøte.
+            Hvis en bruker har prikk fra før vil ikke prikkene bli endret her.
+            Merk at siden kan brukes til å sjekke påmelding, selv om arrangementet ikke har prikker.
+        </p>
+        <p>
+            Klikk på "Start arrangementet " for å starte å fordele for-sent prikker til dem som møter opp.
+            Dette kan bare gjøres etter starttidspunktet.
+            Klikk på "Avslutt registrering" for å fordele ikke-møtt prikker til dem som ikke møtte opp.
+            Prikkoversikten finnes <a href="{%  url "event_administer_penalties" pk=event.pk %}">her</a>
+        </p>
+    </div>
 </div>
 <div>
 <div class="const-height ">
     <h1 class="display-3 {% firstof text_type "" %}"> {%  firstof attendance_message "Skriv inn brukernavn eller skann NTNU-kortet" %}</h1>
 
     {% if reg_datetime and status_type != "success"  %}
-    <p class="lead {% firstof text_type  %} ">{{ reg_datetime|date:"t. F" }} klokken {{ reg_datetime|time:"H.i" }}</p>
+    <p class="lead {% firstof text_type  %} ">{{ reg_datetime|date:"j. F" }} klokken {{ reg_datetime|time:"H.i" }}</p>
     {% endif %}
 </div>
 <form method="post"  autocomplete="off">{% csrf_token %}
@@ -68,23 +72,23 @@
 </form>
 </div>
 <form method="post"  class="py-3 d-flex justify-content-between align-items-center" action="{% url "event_noshow_penalties" event.pk %}">{% csrf_token %}
-    <a href="{%  url "event_administer_penalties" pk=event.pk %}" class="{% firstof text_type "text-muted"%}">Antall ikke møtt: {{ registrations_not_registered }}</a>
+    <a href="{%  url "event_administer_penalties" pk=event.pk %}" class="{% firstof text_type "text-muted"%}">Ikke registrert: {{ registrations_not_registered }}</a>
 
-    <p class="{% firstof text_type "text-muted"%} m-0" >
+    <a class="{% firstof text_type "text-muted"%} m-0" >
     {% if event.penalties_finished_distributed %}
     Ingen prikker å fordele
     {% elif event.has_started %}
-    Arrangementet har startet, registrerte får {% firstof event.get_late_penalty "ingen" %} prikk(er)
+    Arrangementet har startet. Registrering gir {% firstof event.get_late_penalty "ingen" %} prikk(er)
     {% elif event.should_have_started %}
     Klikk på knappen for å starte å starte arrangementet!
     {% else %}
-    Arrangementet har ikke startet. Registrerte får {% firstof event.get_late_penalty "ingen" %} prikk(er)
+    Arrangementet har ikke startet. Registrering gir {% firstof event.get_show_penalty "ingen" %} prikk(er)
     {% endif %}
-    </p>
+    </a>
 
-    {% if event.has_started %}
+    {% if event.has_started and not event.penalties_finished_distributed %}
     <button class="btn btn-secondary" type="submit" value="register_noshow_penalties"
-            onclick="return confirm('Hvis du avslutter registreringen får alle som ikke er registrert {% firstof event.get_noshow_penalty "ingen" %}} prikk(er).')">
+            onclick="return confirm('Hvis du avslutter registreringen får alle som ikke er registrert {% firstof event.get_noshow_penalty "ingen" %} prikk(er).')">
         Avslutt registrering
     </button>
 
@@ -92,19 +96,25 @@
     <button class="btn btn-primary" type="submit" value="register_noshow_penalties">
         Start arrangementet
     </button>
-    {% elif not event.penalties_finished_distributed %}
-        <button class="btn btn-primary" type="submit" value="register_noshow_penalties" disabled>
-        Start arrangementet
-        </button>
+    {% elif not event.has_started %}
+    <a class=" {% firstof text_type "text-muted"%} m-0" >
+        Arrangementet starter
+        {% now "Y-m-d" as todays_date %}
+        {% if todays_date == event.event_start|date:"Y-m-d" %}
+            kl. {{ event.event_start|time:"H.i" }}
+        {% else %}
+            {{ event.event_start|date:"j. F" }}
+        {% endif %}
+    </a>
     {% endif %}
 
 </form>
 </div>
 <script>
 
-let interval = 10000;
+let interval = 15000;
 {%  if not status_type %}
-interval*=6;
+interval*=4;
 {% endif %}
 setTimeout(condRefresh, interval);
 
