removed plusses from git that should not have been there

--- a/nablapps/events/templates/events/register_attendance.html
+++ b/nablapps/events/templates/events/register_attendance.html
@@ -14,9 +14,10 @@
     .collapsing {
       transition: none !important;
     }
-     a:hover {
-+        text-decoration: none;
-+    }
+    a:hover {
+        text-decoration: none;
+        color: var(--nabla-blue); !important;
+    }
 
 </style>
 
