Changes to verbose name of penalty and look on samll devices

--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -132,7 +132,7 @@
 
     {% if event.penalty%}
     <tr>
-        <td>Prikkreglement</td>
+        <td>Prikkregler</td>
         {% if event.penalty == 1%}
         <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Bedpres</td>
         {% endif %}
