Add missing " and remove www from og:url

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
         <meta property="og:image:height" content="200"/>
         {% endblock meta_image %}
 
-        <meta property="og:url" content=https://www.nabla.no/">
+        <meta property="og:url" content="https://nabla.no/">
         <meta property="og:site_name" content="Nabla"/>
         <meta property="og:title" content="Nabla - Fysikk og matematikk"/>
         <meta property="og:description" content="Hjemmesiden til linjeforeningen Nabla, for studentene på
