--- a/nablapps/events/templates/events/event_detail.html
+++ b/nablapps/events/templates/events/event_detail.html
@@ -7,9 +7,11 @@
 {% block content %}
 
 {% block meta_image %}
-        <meta property="og:image" content="https://{{ request.get_host }}{% thumbnail event.picture 1200x630 box=event.cropping upscale=True detail=True quality=95 %}"/>
-        <meta property="og:image:width" content="1200"/>
-        <meta property="og:image:height" content="630"/>
+    {% if event.picture %}
+    <meta property="og:image" content="https://{{ request.get_host }}{% thumbnail event.picture 1200x630 box=event.cropping upscale=True detail=True quality=95 %}"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
+    {% endif %}
 {% endblock meta_image %}
 
 {% include "content/includes/article_content.html" with content=event %}
