--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load bootstrap4 %}
 {% block title %}Nablas forslagskasse{% endblock %}
 
 {% block content %}
@@ -52,38 +52,30 @@
 {% endblock %}
 
 {% block sidebar %}
-<h1>Nablas forslagskasse</h1>
-<p>Har du en superkul idé til noe nytt vi kan gjøre i Nabla? Savner du noe, eller har du en tilbakemelding til oss som drifter linjeforeningen?
-Styret ønsker gjerne hjelp fra dere alle til å gjøre Nabla til en best mulig linjeforening. Vi ønsker derfor alle mulige tilbakemeldinger dersom du har noe på hjertet, enten det er ris eller ros. Det kan være alt fra et ønskearrangement for Arrkom til eventuelle problem eller forbedringer i Nabla.  Du velger selv om du ønsker å være anonym eller gi oss ditt navn. Alle tilbakemeldinger og forslag vil gjennomgås på styremøter og behandles av Styret.  Dersom saken angår noen i Styret, kan du gjerne benytte deg av PostKom som et mellomledd for klager til Styret. <br>
-
+<h1>Nabla - kontakt</h1>
+<p>
+Har du en superkul idé til noe nytt vi kan gjøre i Nabla? Savner du noe, eller har du en tilbakemelding til oss som drifter linjeforeningen?
+Styret ønsker gjerne hjelp fra dere alle til å gjøre Nabla til en best mulig linjeforening. Vi ønsker derfor alle mulige tilbakemeldinger dersom du har noe på hjertet, enten det er ris eller ros. Det kan være alt fra et ønskearrangement for Arrkom til eventuelle problem eller forbedringer i Nabla.  Du velger selv om du ønsker å være anonym eller gi oss ditt navn. Alle tilbakemeldinger og forslag vil gjennomgås på styremøter og behandles av Styret.  Dersom saken angår noen i Styret, kan du gjerne benytte deg av PostKom som et mellomledd for klager til Styret.
+</p>
 <p>
 Du kan også bruke skjemaet til å sende en melding til de tillitsvalgte ved instituttene. ITV-ene tar imot blant annet  forslag til faglige eller studierelaterte endringer. De vil bringe forslagene dine videre til ledelsen. Husk at du også kan kontakte ITV-ene ved utfordringer med emner og undervisere.
 <br>
 Velg mottaker ITV ved IFY for fysikk eller ITV ved IMF for matte
 </p>
 
-
-<b>For å være anonym lar du feltene "Ditt navn" og "Din e-post" stå tomme.</b></p>
+<p>
+<b>For å være anonym lar du feltene "Ditt navn" og "Din e-post" stå tomme.</b>
+</p>
 
 
 {% if spam_check == True %}
-    <p style="color:red;"> Forsøk å regne kontrollspørsmål på nytt</p>
+    {% bootstrap_alert "Forsøk å regne kontrollspørsmål på nytt" alert_type="danger" %}
 {% endif %}
-
+<br>
 <form method="POST">
     {% csrf_token %}
-    {% for field in contact_form %}
-        {% if forloop.counter <= 5 %}
-            <p style="width: 100px;" >{{field.label}} {{field}}</p>
-        {% endif %}
-    {% endfor %}
-    
-    <p>Hva er kvadratroten av {{ test_val }} ganget med kvadratroten av {{ test_val }}?</p>
-    <p>{{ contact_form.spam_check }}</p>
-
-    <button type="submit">Send</button>
-
-{{ contact_form.right_answer }}
+    {% bootstrap_form contact_form %}
+    {% bootstrap_button "Send" button_type="submit" %}
 </form>
 
 {% endblock %}
